--- a/AniCookServe/AniCookServe/AniCookServe.csproj
+++ b/AniCookServe/AniCookServe/AniCookServe.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Global.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UniqueRandomNumber.cs" />
     <EmbeddedResource Include="CookServeDelicious.resx">
       <DependentUpon>CookServeDelicious.cs</DependentUpon>
     </EmbeddedResource>
