-foodKeys now work with food class and appear on the screen. -Food class generates a list of keys that will be used with the activeFood. -removed unnecessary spaces in Food.csv.

--- a/AniCookServe/AniCookServe/AniCookServe.csproj
+++ b/AniCookServe/AniCookServe/AniCookServe.csproj
@@ -90,8 +90,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="Food.csv" />
-    <None Include="Names.csv" />
+    <None Include="Food.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="Names.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -106,46 +110,69 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\foodKeyBackground.png" />
+    <None Include="Resources\foodKeyBackground.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\alfredoSauce.png" />
+    <None Include="Resources\alfredoSauce.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\bacon.png" />
+    <None Include="Resources\bacon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\bbqSauce.png" />
+    <None Include="Resources\bbqSauce.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\cheese.png" />
+    <None Include="Resources\cheese.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\chicken.png" />
+    <None Include="Resources\chicken.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\jalapenos.png" />
+    <None Include="Resources\jalapenos.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\mushroom.png" />
+    <None Include="Resources\mushroom.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\olives.png" />
+    <None Include="Resources\olives.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\pepperoni.png" />
+    <None Include="Resources\pepperoni.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\pizzaDough.png" />
+    <None Include="Resources\pizzaDough.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\tomatoSauce.png" />
+    <None Include="Resources\tomatoSauce.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\tumblr_m7q8i1Yjuq1qje0q4o1_500.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\tumblr_m7q8i1Yjuq1qje0q4o1_500.png" />
+    <None Include="Resources\tumblr_m7q8i1Yjuq1qje0q4o1_500.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
